--- a/index.html
+++ b/index.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  Get insights that help your business grow.
+    <link rel="stylesheet" href="./css/styles.css" />
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+    <title>Stats preview card component</title>
+  </head>
+  <body>
+    <main>
+      <div class="stats-card">
+        <section class="stats-section">
+          <h1 class="stats-heading">
+            Get <span class="violet">insights</span> that help your business
+            grow
+          </h1>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+          <p class="stats-description">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <div class="stats-container">
+            <div class="stat">
+              <div class="number">10k+</div>
+              <div class="name">companies</div>
+            </div>
+
+            <div class="stat">
+              <div class="number">314</div>
+              <div class="name">templates</div>
+            </div>
+
+            <div class="stat">
+              <div class="number">12M+</div>
+              <div class="name">queries</div>
+            </div>
+          </div>
+        </section>
+
+        <div class="stats-img">
+          <picture>
+            <source
+              srcset="./images/image-header-mobile.jpg"
+              media="(max-width:850px)"
+            />
+            <img src="./images/image-header-desktop.jpg" alt="" />
+          </picture>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
